--- a/css/vectors-machine.css
+++ b/css/vectors-machine.css
@@ -13,7 +13,7 @@ body {
 }
 
 .machine {
-    /* background-color: rgb(66, 73, 83);
+    background-color: rgb(66, 73, 83);
     width: 35em;
     height: 43em;
     padding: 1.5em;
@@ -23,22 +23,7 @@ body {
     grid-gap: 1em;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 2fr 1fr;
-    grid-template-areas: "items order" "grab grab"; */
-    background-color: rgb(66, 73, 83);
-    width: 35em;
-    height: 43em;
-    padding: 1.5em;
-    margin: auto;
-    position: relative;
-    display: flex;
-    grid-gap: 1em;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 2fr 1fr;
-    grid-template-areas:
-        "items order"
-        "grab grab";
-    justify-content: space-between;
-    flex-direction: row;
+    grid-template-areas: "items order" "grab grab";
 }
 
 .selector {
@@ -93,13 +78,50 @@ body {
 }
 
 .items {
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(192, 192, 192);    
+    display: flex;  
+    flex-direction: row;      
+    /* background-color: rgb(192, 192, 192);
     grid-area: "items";
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 0.5em;
+    grid-gap: 0.5em; */
 }
 
+
+.stack{
+    max-width: 100px;
+    min-width: 100px;
+    height: 100%;
+    background-color: #f3d7d7;
+}
+.item-into-stack{
+    max-width: 80px;
+    min-width: 80px;
+    height: 90px;
+    background-color: rgb(255, 0, 255);
+
+}
+.quees{
+    max-width: 200px;
+    min-width: 200px;
+    height: 300px;
+    background-color: rgb(0, 38, 255);
+}
+
+.itemsB{
+    max-width: 90%;
+    min-width: 150px;
+    height: 150px;
+    background-color: rgb(0, 255, 55);
+}
+
+.itemsC{
+    max-width: 90%;
+    min-width: 150px;
+    height: 150px;
+    background-color: rgb(238, 255, 0);
+}
 .item {
     margin: auto;
     display: block;
@@ -183,7 +205,7 @@ input {
 }
 
 .rectangle {
-    background-color: rgb(169, 177, 188);
+    background-color: rgb(35 35 35 / 46%);
     width: 80%;
     height: 3em;
     margin: 3em auto;
