--- a/css/vectors-machine.css
+++ b/css/vectors-machine.css
@@ -90,17 +90,22 @@ body {
 
 
 .stack{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     max-width: 100px;
     min-width: 100px;
     height: 100%;
     background-color: #f3d7d7;
+    padding: 10px;
 }
-.item-into-stack{
+.item-into-stack{    
     max-width: 80px;
     min-width: 80px;
+    padding: 5px;
+    margin: 5px;
     height: 90px;
     background-color: rgb(255, 0, 255);
-
 }
 .quees{
     max-width: 200px;
@@ -157,15 +162,6 @@ body {
     height: 50px;
     background-color: rgb(145, 255, 0);
 }
-
-
-
-
-
-
-
-
-
 .item {
     margin: auto;
     display: block;
